--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -1,3 +1,44 @@
-html, body {
-  margin: 20px;
+
+@import url('nav.css');
+@import url('login.css');
+
+* 
+{
+    color : #FFF;
+    box-sizing: border-box;
+    
+}
+
+html, body, .container 
+{
+  width: 100%;
+  height: 100%;
+
+}
+body 
+{
+	padding-top: 50px;
+	position: relative;
+}
+
+pre 
+{
+  	tab-size: 8;
+}
+
+div h3 span
+{
+     color : #FFF;
+     font-size:16px;
+}
+
+div span 
+{
+     font-weight: 200;
+}
+
+h1
+{
+     font-weight: 200;
+     font-size: 24px;
 }
