third design with new pallete

--- a/app/templates/login.hbs
+++ b/app/templates/login.hbs
@@ -4,12 +4,12 @@
 	    <div class="col-md-12 col-xs-12" align="center">
 
             <div class="line">
-            	<h3>FASHION TALK</h3>
+            	<h3>myApparel</h3>
             </div>
             <div class="outter">
-            	<img src="/images/equipment.svg" class="image-circle"/>
+            	<img src="/images/logov3.svg" class="image-circle">
             </div>   
-            <h1>Hi Guest</h1>
+            <h1>Welcome, Guest</h1>
 
 	    </div>
 
@@ -26,7 +26,11 @@
                 </div>
                 <div align="center">
                      <button {{action 'hackIn'}} class="btn btn-success">LOGIN</button>
-                     <button {{action 'hackInWithFB'}} class="btn btn-primary">FB LOGIN</button>
+                     <button {{action 'hackIn'}} class="btn btn-warning">REGISTER</button>
+                      <a {{action 'hackInWithFB'}} class="btn btn-block btn-social btn-facebook">
+                        <i class="fa fa-facebook"></i> Sign in with Facebook
+                      </a>
+                      
                 </div>
                 
         </div>
